add stick balancing

--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                 <p>Explore self-balancing binary search trees with real-time insertion and deletion operations.</p>
                 <a href="rbtree/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Stick Balancing</h2>
+                <p>Watch as an AI agent learns to balance a stick using reinforcement learning.</p>
+                <a href="stick/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
