--- a/snake/index.html
+++ b/snake/index.html
@@ -23,8 +23,7 @@
         <p>Epsilon: <span id="epsilon">1.0</span></p>
     </div>
     <div id="charts">
-        <canvas id="scoreChart"></canvas>
-        <canvas id="epsilonChart"></canvas>
+        <canvas id="combinedChart"></canvas>
     </div>
     <div id="explanation">
         <h2>How it Works: Reinforcement Learning in Snake</h2>
