--- a/snake/index.html
+++ b/snake/index.html
@@ -14,10 +14,8 @@
         <canvas id="gameCanvas" width="400" height="400"></canvas>
     </div>
     <div id="controls">
-        <button id="startTraining">Start Training</button>
-        <button id="startTesting">Start Testing</button>
-        <button id="toggleVisualization">Disable Visualization</button>
-        <span id="visualizationStatus" style="margin-left: 10px;">Visualization: On</span>
+        <button id="toggleMode">Switch to Testing</button>
+        <span id="modeStatus" style="margin-left: 10px;">Mode: Training</span>
     </div>
     <div id="stats">
         <p>Episode: <span id="episode">0</span></p>
