--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
                 <p>Watch as an AI agent learns to balance a stick using reinforcement learning.</p>
                 <a href="stick/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>RL Snake</h2>
+                <p>An AI-powered Snake game that uses reinforcement learning to train an agent to play, featuring real-time visualization of the learning process.</p>
+                <a href="snake/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
