--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
                 <p>An AI-powered Snake game that uses reinforcement learning to train an agent to play, featuring real-time visualization of the learning process.</p>
                 <a href="snake/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Nonogram</h2>
+                <p>Solve colorful 10x10 nonogram puzzles to reveal hidden emoji pictures in this fun and challenging logic game.</p>
+                <a href="nonogram/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
