on win, overlay emoji

--- a/nonogram/index.html
+++ b/nonogram/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji Nonogram 10x10</title>
+    <title>Emoji Nonogram</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Emoji Nonogram 10x10</h1>
+    <h1>Emoji Nonogram</h1>
     <div id="game-container">
         <div id="col-hints"></div>
         <div class="grid-and-row-hints">
             <div id="row-hints"></div>
             <div id="grid-container"></div>
+            <div id="emoji-overlay"></div>
         </div>
     </div>
     <button id="check-solution">Check Solution</button>
