--- a/password/index.html
+++ b/password/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>MD5 Cracker</h1>
-    <input type="text" id="inputText" placeholder="Enter text to hash">
+    <input type="text" id="inputText" placeholder="Enter text to hash" maxlength="7">
     <button id="generateHash">Generate MD5 Hash</button>
     <p id="hashResult"></p>
     <button id="crackGPU">Crack with GPU</button>
