add md5 cracker

--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
                 <p>Solve colorful 10x10 nonogram puzzles to reveal hidden emoji pictures in this fun and challenging logic game.</p>
                 <a href="nonogram/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>MD5 Cracker</h2>
+                <p>Demonstrate the power of GPU computing by cracking MD5 hashes at lightning speed.</p>
+                <a href="password/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
