--- a/breakout/index.html
+++ b/breakout/index.html
@@ -21,6 +21,7 @@
         </div>
     </div>
     <script src="game.js"></script>
+    <script src="prioritizedReplayBuffer.js"></script>
     <script src="model.js"></script>
     <script src="agent.js"></script>
     <script src="visualization.js"></script>
