--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="game-box">
                 <h2>MD5 Cracker</h2>
-                <p>Demonstrate the power of GPU computing by cracking MD5 hashes at lightning speed.</p>
+                <p>Demonstrate the power of parallel computing by cracking MD5 hashes with and without GPU.</p>
                 <a href="password/index.html" class="play-button">Play</a>
             </div>
 </div>
