--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -32,6 +32,7 @@
 </head>
 <body>
     <div id="game-container"></div>
+    <div id="winPercentage"></div>
     <canvas id="chart"></canvas>
     <button id="modeButton">Switch to Test Mode</button>
     
