--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -36,6 +36,13 @@
     <canvas id="chart"></canvas>
     <button id="modeButton">Switch to Test Mode</button>
     
+    <!-- Add this slider and label -->
+    <div>
+        <label for="difficultySlider">Opponent Difficulty: </label>
+        <input type="range" id="difficultySlider" min="0" max="10" value="5" step="1" oninput="updateDifficulty(this.value)">
+        <span id="difficultyValue">5</span>
+    </div>
+
     <script src="model.js"></script>
     <script src="game.js"></script>
     <script src="agent.js"></script>
