--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                 <p>Demonstrate the power of parallel computing by cracking MD5 hashes with and without GPU.</p>
                 <a href="password/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Tic-Tac-Toe</h2>
+                <p>An interactive Tic-Tac-Toe game powered by Deep Q-Learning, allowing users to train an AI agent and play against it at various difficulty levels."</p>
+                <a href="tictactoe/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
