--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <div class="game-box">
                 <h2>Tic-Tac-Toe</h2>
-                <p>An interactive Tic-Tac-Toe game powered by Deep Q-Learning, allowing users to train an AI agent and play against it at various difficulty levels."</p>
+                <p>An interactive Tic-Tac-Toe game powered by Deep Q-Learning, allowing users to train an AI agent and play against it at various difficulty levels.</p>
                 <a href="tictactoe/index.html" class="play-button">Play</a>
             </div>
 </div>
