--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
                 <p>An interactive Tic-Tac-Toe game powered by Deep Q-Learning, allowing users to train an AI agent and play against it at various difficulty levels.</p>
                 <a href="tictactoe/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Breakout</h2>
+                <p>An Breakout game powered by a Deep Q-Network (DQN) agent, demonstrating reinforcement learning in action with real-time visualization of training progress.</p>
+                <a href="breakout/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
