--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
                 <p>An Breakout game powered by a Deep Q-Network (DQN) agent, demonstrating reinforcement learning in action with real-time visualization of training progress.</p>
                 <a href="breakout/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Robot Arm</h2>
+                <p>Train a robotic arm using deep reinforcement learning, where you can demonstrate correct movements and watch the AI learn from your examples.</p>
+                <a href="robotarm/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
