--- a/robotarm/index.html
+++ b/robotarm/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1>Robot Arm</h1>
+    
     <div id="simulation-container">
         <canvas id="canvas" width="600" height="400"></canvas>
+        <div id="success-message" class="hidden">Success!</div>
         <div id="controls">
-            <button id="mode-switch">Switch Mode</button>
+            <button id="mode-switch">Switch to AI Mode</button>
             <button id="claw-control">Toggle Claw</button>
             <button id="start-training">Start Training</button>
             <button id="reset">Reset</button>
