--- a/pong/index.html
+++ b/pong/index.html
@@ -10,8 +10,7 @@
         <div class="game-container">
             <canvas id="game-canvas" width="600" height="400"></canvas>
             <div class="controls">
-                <button id="start-training">Start Training</button>
-                <button id="pause-training">Pause</button>
+                <button id="toggle-mode">Start Training</button>
                 <span id="episode-counter">Episode: 0</span>
             </div>
         </div>
