switched to DQN and got 1st signs of life

--- a/pong/index.html
+++ b/pong/index.html
@@ -24,7 +24,7 @@
     <!-- Agent -->
     <script src="src/agent/model.js"></script>
     <script src="src/agent/memory.js"></script>
-    <script src="src/agent/ppo.js"></script>
+    <script src="src/agent/dqn.js"></script>
 
     <!-- Training -->
     <script src="src/training/environment.js"></script>
