--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                 <p>Train a robotic arm using deep reinforcement learning, where you can demonstrate correct movements and watch the AI learn from your examples.</p>
                 <a href="robotarm/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Pong</h2>
+                <p>A self-learning Pong AI that trains through neural networks and lets you challenge it in real-time using WebGPU acceleration.</p>
+                <a href="pong/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
