--- a/airhockey/index.html
+++ b/airhockey/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Hockey</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
 </head>
 <body>
+    <button onclick="toggleTrainingMode()">Toggle Training Mode</button>
     <canvas id="gameCanvas"></canvas>
+    <script src="dqn_agent.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
