--- a/airhockey/index.html
+++ b/airhockey/index.html
@@ -7,6 +7,7 @@
 <body>
     <button onclick="toggleTrainingMode()">Toggle Training Mode</button>
     <canvas id="gameCanvas"></canvas>
+    <script src="environment.js"></script>
     <script src="dqn_agent.js"></script>
     <script src="game.js"></script>
 </body>
