--- a/airhockey/index.html
+++ b/airhockey/index.html
@@ -8,7 +8,7 @@
     <button onclick="toggleTrainingMode()">Toggle Training Mode</button>
     <canvas id="gameCanvas"></canvas>
     <script src="environment.js"></script>
-    <script src="dqn_agent.js"></script>
+    <script src="ppo_agent.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
