--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
                 <p>A self-learning Pong AI that trains through neural networks and lets you challenge it in real-time using WebGPU acceleration.</p>
                 <a href="pong/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Air Hockey</h2>
+                <p>An AI air hockey opponent that learns through self-play, using reinforcement learning to master hitting, scoring, and strategic gameplay.</p>
+                <a href="airhockey/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
