skill level chart

--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Tic-Tac-Toe DQN</h1>
         <div id="game-container"></div>
-        <div id="winPercentage" class="stats"></div>
+        <div id="winPercentage" class="stats">Rolling Average Reward: 0.000</div>
         <canvas id="chart"></canvas>
         <button id="modeButton" class="btn">Switch to Test Mode</button>
     </div>
