missing normalization port

--- a/cartpole/index.html
+++ b/cartpole/index.html
@@ -47,6 +47,7 @@
     <script src="network.js"></script>
     <script src="optimizer.js"></script>
     <script src="agent.js"></script>
+    <script src="normalization.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
