--- a/cartpole/index.html
+++ b/cartpole/index.html
@@ -24,8 +24,7 @@
     <div class="container">
         <h1>CartPole - Streaming Learning</h1>
         <div class="controls">
-            <button id="toggleTraining">Start Training</button>
-            <button id="toggleTesting">Test Model</button>
+            <button id="toggleTraining">Switch to Test Mode</button>
             <div>
                 <label>Learning Rate: </label>
                 <input type="number" id="learningRate" value="1.0" step="0.1">
