--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav-links">
             <a href="#about">About</a>
             <a href="#ai-apps">AI Apps</a>
-            <a href="#rl-experiments">AI Experiments</a>
+            <a href="#ai-experiments">AI Experiments</a>
             <a href="https://github.com/elichen" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/elichen" target="_blank">LinkedIn</a>
         </nav>
