--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                     <p>Demonstrate the power of parallel computing by cracking MD5 hashes with and without GPU.</p>
                     <a href="password/index.html" class="play-button">Play</a>
                 </div>
+                <div class="game-box">
+                    <h2>Sorting Visualizer</h2>
+                    <p>Watch and compare how different sorting algorithms organize data in real-time, with step-by-step visualization.</p>
+                    <a href="sort/index.html" class="play-button">Play</a>
+                </div>
         </section>
 
         <section id="ai-experiments">
