--- a/3dlife/index.html
+++ b/3dlife/index.html
@@ -52,6 +52,10 @@
     <div class="controls">
         <button id="startStop">Start/Stop</button>
         <button id="reset">Reset</button>
+        <div class="slider-container">
+            <label for="density">Initial Cell Density: <span id="densityValue">0.09</span></label>
+            <input type="range" id="density" min="0.00" max="0.20" step="0.01" value="0.09">
+        </div>
         <div class="info">
             <span>Cells Alive: <span id="cellCount">0</span></span>
             <span>FPS: <span id="fps">0</span></span>
