--- a/3dlife/index.html
+++ b/3dlife/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Conway's Game of Life</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     
     <!-- Inline shaders -->
@@ -54,8 +57,8 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <div class="title">3D Cellular Automata</div>
     <div class="controls">
-        <button id="startStop">Start/Stop</button>
         <button id="reset">Reset</button>
         <div class="slider-container">
             <label for="density">Initial Cell Density: <span id="densityValue">0.20</span></label>
