--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
                     <p>Watch and compare how different sorting algorithms organize data in real-time, with step-by-step visualization.</p>
                     <a href="sort/index.html" class="play-button">Play</a>
                 </div>
+                <div class="game-box">
+                    <h2>3D Automata</h2>
+                    <p>A 3D cellular automaton that grows organic crystalline structures, with cells aging from green to brown.</p>
+                    <a href="3dlife/index.html" class="play-button">Play</a>
+                </div>
         </section>
 
         <section id="ai-experiments">
