--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eli Chen - AI & RL Experiments</title>
+    <title>Eli Chen</title>
     <link rel="stylesheet" href="main-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
 
         <section id="about" class="about-section">
             <h2 class="section-header">About</h2>
-            <p>I'm Eli Chen, an engineer, founder, and CTO. This is my playground for browser-based AI experiments. Everything runs client-side in your browser.</p>
+            <p>I'm an engineer, founder, and CTO. This is my playground for browser-based AI experiments. Everything runs client-side in your browser.</p>
         </section>
 
         <section id="ai-apps">
