Log gradient flow

--- a/streaming-rl/index.html
+++ b/streaming-rl/index.html
@@ -40,6 +40,7 @@
         </div>
         <canvas id="cartpoleCanvas" width="600" height="400"></canvas>
         <div id="stats"></div>
+        <pre id="gradientStats" style="font-family: monospace; white-space: pre; margin: 10px; padding: 10px; background: #f5f5f5;"></pre>
     </div>
 
     <script src="cartpole.js"></script>
