--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
                     <p>An AI air hockey opponent that learns through self-play using RL.</p>
                     <a href="airhockey/index.html" class="play-button">View Demo →</a>
                 </div>
+                <div class="game-box">
+                    <h2>Streaming Learning</h2>
+                    <p>A TFJS port of the new Streaming Q-learning algorithm with eligibility traces.</p>
+                    <a href="streaming-rl/index.html" class="play-button">View Demo →</a>
+                </div>
             </div>
         </section>
     </div>
