--- a/streaming-rl/index.html
+++ b/streaming-rl/index.html
@@ -24,18 +24,24 @@
     <div class="container">
         <h1>CartPole - Streaming Learning</h1>
         <div class="controls">
-            <button id="toggleTraining">Switch to Test Mode</button>
-            <div>
-                <label>Learning Rate: </label>
-                <input type="number" id="learningRate" value="1.0" step="0.1">
+            <div style="margin-bottom: 10px;">
+                <button id="toggleTraining">Switch to Test Mode</button>
+                <button id="resetAgent">Reset Agent</button>
+            </div>
+            <div style="margin-bottom: 10px;">
+                <button id="toggleMode">Balance Mode</button>
             </div>
             <div>
-                <label>Gamma: </label>
-                <input type="number" id="gamma" value="0.99" step="0.01">
+                <label>Initial Epsilon: </label>
+                <input type="number" id="epsilonStart" value="1.0" step="0.1" min="0" max="1">
             </div>
             <div>
-                <label>Lambda: </label>
-                <input type="number" id="lambda" value="0.8" step="0.1">
+                <label>Final Epsilon: </label>
+                <input type="number" id="epsilonTarget" value="0.01" step="0.01" min="0" max="1">
+            </div>
+            <div>
+                <label>Decay Steps: </label>
+                <input type="number" id="decaySteps" value="10000" step="1000" min="1000">
             </div>
         </div>
         <canvas id="cartpoleCanvas" width="600" height="400"></canvas>
