--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
                     <p>A 3D cellular automaton that grows organic crystalline structures, with cells aging from green to brown.</p>
                     <a href="3dlife/index.html" class="play-button">Play</a>
                 </div>
+                <div class="game-box">
+                    <h2>Flowspace</h2>
+                    <p>An interactive fluid simulation that dances with sound and motion.</p>
+                    <a href="flowspace/index.html" class="play-button">Play</a>
+                </div>
         </section>
 
         <section id="ai-experiments">
