--- a/racer/index.html
+++ b/racer/index.html
@@ -8,6 +8,7 @@
     <canvas id="gameCanvas"></canvas>
     <script src="car.js"></script>
     <script src="track.js"></script>
+    <script src="lapTimer.js"></script>
     <script src="game.js"></script>
 </body>
 </html> 
