--- a/streaming-rl/index.html
+++ b/streaming-rl/index.html
@@ -25,8 +25,7 @@
         <h1>CartPole - Streaming Learning</h1>
         <div class="controls">
             <div style="margin-bottom: 10px;">
-                <button id="toggleTraining">Switch to Test Mode</button>
-                <button id="resetAgent">Reset Agent</button>
+                <button id="toggleTraining">Switch to Manual Mode</button>
             </div>
             <div style="margin-bottom: 10px;">
                 <button id="toggleMode">Balance Mode</button>
@@ -42,6 +41,11 @@
             <div>
                 <label>Decay Steps: </label>
                 <input type="number" id="decaySteps" value="10000" step="1000" min="1000">
+            </div>
+            <div style="margin-top: 10px; padding: 5px; background: #f0f0f0; border-radius: 4px;">
+                <strong>Manual Controls:</strong><br>
+                Left Arrow: Push Left<br>
+                Right Arrow: Push Right
             </div>
         </div>
         <canvas id="cartpoleCanvas" width="600" height="400"></canvas>
