--- a/xgboost/index.html
+++ b/xgboost/index.html
@@ -32,6 +32,11 @@
             <div id="dataViz"></div>
             <div id="performanceViz"></div>
         </div>
+
+        <div class="metrics-container">
+            <h3>Model Metrics</h3>
+            <div id="confusionMatrix" class="confusion-matrix"></div>
+        </div>
     </div>
 </body>
 </html> 
