--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
                     <p>A TFJS port of the new Streaming Q-learning algorithm with eligibility traces.</p>
                     <a href="streaming-rl/index.html" class="play-button">View Demo →</a>
                 </div>
+                <div class="game-box">
+                    <h2>XGBoost</h2>
+                    <p>Interactive Titanic survival predictor using gradient boosting, with data visualizations.</p>
+                    <a href="xgboost/index.html" class="play-button">View Demo →</a>
+                </div>
             </div>
         </section>
     </div>
