--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
                     <p>An interactive fluid simulation that dances with sound and motion.</p>
                     <a href="flowspace/index.html" class="play-button">Play</a>
                 </div>
+                <div class="game-box">
+                    <h2>Racer</h2>
+                    <p>Race against time in this high-speed circuit challenge.</p>
+                    <a href="racer/index.html" class="play-button">Play</a>
+                </div>
         </section>
 
         <section id="ai-experiments">
