--- a/racer/index.html
+++ b/racer/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <div id="controls">
+        <h3>Controls</h3>
+        <p>⬆️ Accelerate</p>
+        <p>⬇️ Brake/Reverse</p>
+        <p>⬅️ ➡️ Steer</p>
+    </div>
     <script src="car.js"></script>
     <script src="track.js"></script>
     <script src="lapTimer.js"></script>
