--- a/lunarlander/index.html
+++ b/lunarlander/index.html
@@ -15,6 +15,8 @@
         <p>Successful Landings: <span id="landings">0</span></p>
         <p>Crashes: <span id="crashes">0</span></p>
     </div>
+    <div id="landedMessage" class="game-message landed">LANDED!</div>
+    <div id="crashedMessage" class="game-message crashed">CRASHED!</div>
     <script src="game.js"></script>
 </body>
 </html> 
