--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
                     <p>Race against time in this high-speed circuit challenge.</p>
                     <a href="racer/index.html" class="play-button">Play</a>
                 </div>
+                <div class="game-box">
+                    <h2>Lunar Lander</h2>
+                    <p>Navigate your spacecraft to a safe landing on the moon while managing fuel and avoiding crashes!</p>
+                    <a href="lunarlander/index.html" class="play-button">Play</a>
+                </div>
         </section>
 
         <section id="ai-experiments">
