--- a/emojimata/index.html
+++ b/emojimata/index.html
@@ -12,6 +12,9 @@
         <div class="instructions">
             <p>Click and drag to damage the pattern</p>
             <p>Shift + click to plant a new seed</p>
+            <hr>
+            <p><em>This web application implements a Neural Cellular Automata model that was trained using the code in the <a href="https://colab.research.google.com/github/google-research/self-organising-systems/blob/master/notebooks/growing_ca.ipynb" target="_blank">Growing Neural Cellular Automata</a> notebook.</em></p>
+            <p><em>The model allows users to interact with a cellular automaton, where they can damage the pattern or plant new seeds by clicking on the canvas.</em></p>
         </div>
     </div>
     <script src="js/utils.js"></script>
