--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
                     <p>Interactive Titanic survival predictor using gradient boosting, with data visualizations.</p>
                     <a href="xgboost/index.html" class="play-button">View Demo →</a>
                 </div>
+                <div class="game-box">
+                    <h2>Growing Emoji</h2>
+                    <p>Experience a dynamic Neural Cellular Automata model of an emoji.</p>
+                    <a href="emojimata/index.html" class="play-button">View Demo →</a>
+                </div>
             </div>
         </section>
     </div>
