--- a/mtncar/index.html
+++ b/mtncar/index.html
@@ -4,6 +4,7 @@
     <title>Mountain Car</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.11.0"></script>
 </head>
 <body>
     <div class="container">
@@ -15,9 +16,19 @@
         <canvas id="gameCanvas"></canvas>
     </div>
     <script src="src/mountainCar.js"></script>
+    <script src="src/mountainCarEnv.js"></script>
+    <script src="src/agent.js"></script>
+    <script src="src/network.js"></script>
+    <script src="src/optimizer.js"></script>
+    <script src="src/normalization.js"></script>
+    <script src="src/utils.js"></script>
     <script src="src/game.js"></script>
     <script>
-        new Game()
+        async function init() {
+            await tf.setBackend('cpu');
+            new Game();
+        }
+        init();
     </script>
 </body>
 </html> 
