--- a/emojimata/index.html
+++ b/emojimata/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Neural Cellular Automata</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Neural Cellular Automata | Anthropic Style</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.3.0/dist/tf.min.js"></script>
 </head>
@@ -10,11 +12,12 @@
         <h1>Neural Cellular Automata</h1>
         <canvas id="canvas"></canvas>
         <div class="instructions">
-            <p>Click and drag to damage the pattern</p>
-            <p>Shift + click to plant a new seed</p>
+            <p>Interact with this self-organizing system:</p>
+            <p><strong>Click and drag</strong> to create perturbations in the pattern</p>
+            <p><strong>Shift + click</strong> to plant a new seed</p>
             <hr>
-            <p><em>This web application implements a Neural Cellular Automata model that was trained using the code in the <a href="https://colab.research.google.com/github/google-research/self-organising-systems/blob/master/notebooks/growing_ca.ipynb" target="_blank">Growing Neural Cellular Automata</a> notebook.</em></p>
-            <p><em>The model allows users to interact with a cellular automaton, where they can damage the pattern or plant new seeds by clicking on the canvas.</em></p>
+            <p><em>This interactive demonstration showcases a Neural Cellular Automata model trained using the methodology from the <a href="https://colab.research.google.com/github/google-research/self-organising-systems/blob/master/notebooks/growing_ca.ipynb" target="_blank">Growing Neural Cellular Automata</a> research.</em></p>
+            <p><em>The system demonstrates emergent behavior and self-organization principles, where complex patterns arise from simple rules and local interactions.</em></p>
         </div>
     </div>
     <script src="js/utils.js"></script>
