--- a/swipe2chat/index.html
+++ b/swipe2chat/index.html
@@ -60,8 +60,7 @@
             <div class="swipe-container">
                 <div id="card-stack"></div>
                 <div class="no-users-message hidden">
-                    <h3>No one is free right now</h3>
-                    <p>Check back later or mark yourself as free!</p>
+                    <h3>😞 Sorry no one is here</h3>
                 </div>
                 <div class="swipe-buttons">
                     <button class="swipe-button" id="swipe-left">
